--- a/wiki/_config.yml
+++ b/wiki/_config.yml
@@ -1,1 +1,27 @@
-baseurl: /jekyll_demo
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing these this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'jekyll serve'. If you change this file, please restart the server process.
+
+# Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
+title: 优办开放平台开发者文档
+email: chenyh@shinemo.com
+description: > # this means to ignore newlines until "baseurl:"
+  优办开放平台开发者文档，通过此文档可以方便的接入优办各个产品。
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "http://www.shinemo.com" # the base hostname & protocol for your site
+twitter_username: jekyllrb
+github_username:  jekyll
+
+# Build settings
+markdown: kramdown
+theme: minima
