--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,10 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: 优办开放平台开发者文档
+title: 讯盟开放平台开发者文档
 email: chenyh@shinemo.com
 description: > # this means to ignore newlines until "baseurl:"
-  优办开放平台开发者文档，通过此文档可以方便的接入优办各个产品
+  讯盟开放平台开发者文档，通过此文档可以方便的接入优办各个产品
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://www.shinemo.com" # the base hostname & protocol for your site
 twitter_username: jekyllrb
